<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="pattern" translatable="false">%.0f kwh</string>
    <string name="app_name">Home power consumption</string>
    <string name="label_avg">Average</string>
    <string name="label_date">Date</string>
    <string name="label_reading">Reading</string>
    <string name="main.emty.title">No data to show</string>
    <string name="main.empty.suggest">Record meter readings frequently to follow up your home electricity consumption.</string>
    <string name="label_readings">Readings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main"><strike>Home power consumption</strike></string>
    <string name="label_billing_period">Billing period</string>
    <string name="label_consump_proyection">Estimated consumption</string>
    <string name="label_consumption">Consumption kWh</string>
    <string name="label_day">Day</string>
    <string name="label_days">Days</string>
    <string name="label_days_consumption">Days consumed</string>
    <string name="label_last_reading">Last reading</string>
    <string name="label_consump_avg">Average consumption</string>
    <string name="label_start_consumption">Start of consumption</string>
    <string-array name="readings_options">
        <item>End period</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="edit_reading">Edit reading</string>
    <string name="end_period">End billing period with this Reading</string>
    <string name="end_period_ask">Are you sure to finish the billing period on this date?</string>
    <string name="end_period_psoitive">Continue</string>
    <string name="alert_over_range">Reading out of range</string>
    <string name="save">Save</string>
    <string name="settings.ac.period">Billing period (days)</string>
    <string name="settings.ac.period.limit">kWh limit by period</string>
    <string name="settings.ac.price.kwh">Price per kWh</string>
    <string name="settings.ac.discount.kwh">Discount per kWh (%)</string>
    <string name="settings.ac.discount.kwh.old">Discount per kWh</string>
    <string name="settings.ac.currency">Currency</string>
    <string name="chart.legend.accumulated">Cumulative consumption (kWh)</string>
    <string name="chart.legend.avg">Average (kWh)</string>
    <string name="chart.legend.avg.limit">Average limit (kWh)</string>
    <string name="chart.legend.bar">Consumption since previous reading (kWh)</string>
    <string name="chart.legend.period.limit">Period limit (kWh)</string>
    <string name="chart.legend.estimate">Estimated consumption</string>
    <string name="activity.new.reading.error1">Wrong value</string>
    <string name="activity.new.reading.observation">Observations</string>
    <string name="activity.new.reading.help">**You can change the reading date from the top right menu</string>
    <string name="activity.new.reading.date">Reading date</string>
    <string name="activity.new.reading.input.error">Enter at least 1 character</string>
    <string name="activity.new.reading.dialog.content">At the end of a billing period, the accumulated consumption counter is reset</string>
    <string name="activity.new.reading.dialog.title">Notice</string>
    <string name="activity.new.reading.input.error2">Reading out of range</string>
    <string name="title.activity.new.reading">Record reading</string>
    <string name="activity.new.reading.snack.warning">Reading for selected date already exist</string>
    <string name="options">Options</string>
    <string-array name="main_options">
        <item>New reading</item>
        <item>End period</item>
    </string-array>
    <string name="activity.main.dialog.end.period.content">At the end of a billing period the accumulated consumption counter is restarted, then select the date on which you want to end the period</string>
    <string name="main.fragment.end.period.snack.content.error">Unexpected error while attempting this action.</string>
    <string name="main.fragment.end.period.snack.content.ok">Period completed successfully.</string>
    <string name="main.fragment.end.period.snack.content.error2">Can not end period, enter readings first</string>
    <string name="share_app_msg">Record and follow up your home electricity consumption easily with this app</string>
    <string name="share_using">Share using</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="remove_ads">Remove ads</string>
    <string name="billing_error">Ha ocurrido un error inesperado y no se pudo efectuar la compra</string>
    <string name="no_data_chart">No data to show</string>
    <string name="notice">Notice</string>
    <string name="remove_ads_thank">Thanks for collaborating with this app</string>
    <string name="first_reading_notice">This is your first record, make sure whenever possible that the first record matches the reading reflected on your last invoice in order to obtain a better estimate, otherwise the application will take the current date as the beginning of the period and make estimates from today until the end of the approximate period</string>
    <string name="energy_meter_name">Energy meter:</string>
    <string name="initial_reading">Initial reading</string>
    <string name="ok" translatable="false">OK</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-9964109306515647~6674066211</string>
    <string name="admob_banner" translatable="false">ca-app-pub-9964109306515647/6534465419</string>
    <string name="admob_nativeS002" translatable="false">ca-app-pub-9964109306515647/3801325019</string>
    <string name="admob_interstical" translatable="false">ca-app-pub-9964109306515647/4998856614</string>
    <string name="admob_native" translatable="false">ca-app-pub-9964109306515647/1751837238</string>
    <string name="initial_reading_val" translatable="false">%1$s kWh</string>
    <string name="avg_consumption_val" translatable="false">%1$s kWh/d</string>
    <string name="estimated_expense_val" translatable="false">%1$s%2$s</string>
    <string name="estimated_expense">Estimated expense</string>
    <string name="estimated_unsubsidized_expense_val" translatable="false">%1$s%2$s</string>
    <string name="estimated_unsubsidized_expense">Estimated unsubsidized expense</string>
    <string name="settings.ac.fixed_charges">Fixed charges</string>
    <string name="days_consumed_val">%1$.0f days</string>
    <string name="label_medidor">Name/ID</string>
    <string name="description">Description</string>
    <string name="invalid_medidor_name">Valid Name or ID is required</string>
    <string name="new_medidor">New energy meter</string>
    <string name="agree">Continue</string>
    <string name="date_format">MMM dd, yyy</string>
    <string name="last_reading_suggest">Last reading (%1$s): %2$s kWh</string>
    <string name="delete_medidor_notice">This action will permanently erase the selected energy meter and all the records associated with it, do you want to proceed?</string>
    <string name="detail.period.init">Beginning of period</string>
    <string name="detail.period.title">Billing period details</string>
    <string name="detail.period.last_lecture.date">Last reading date</string>
    <string name="detail.period.lenght">Period length</string>
    <string name="detail.period.title2">Period consumption details</string>
    <string name="detail.period">Period</string>
    <string name="detail.consumption">Consumption</string>
    <string name="calculator.resume">Estimated hourly consumption   %1$s kWh</string>
    <string name="calculator.title">Consumption calculator</string>
    <string name="calculator.menu.pulses">Pulses per kWh</string>
    <string name="calculator.explanation">
       This tool was designed to calculate the real-time power consumption based on the number of pulses emitted by your energy meter in a specific time period.

        \n\nTo achieve this it is necessary that you know how many pulses per kWh your equipment emits, this information is found in front of the meter.

        \n\n(Eg 1600 imp / kWh, that is, for each kilowatt-hour of energy consumption, your meter emits 1,600 flashes of light.)

        \n\n <b>For a better calculation start the chronometer with the first impulse and stop it with the last, the minimum pulses required are two, however for a more accurate calculation enter 5 to 10 minimum flashes by clicking each in the consumption part of the screen.</b>
    </string>
    <string-array name="medidor_options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="not_show_again">Not show again</string>
    <string name="help">Help</string>
    <string name="calculator.per_day">Per day</string>
    <string name="detail.period.readings">Period readings</string>
    <string name="label_consumption_since_last_reading">Consumption in %1$s days</string>
    <string name="label_consumption_in_hours">Consumption in %1$s hours</string>
    <string name="lecturas_desde_hasta">Readings from %1$s to %2$s</string>
    <string name="detail.chart1.title">Accumulated consumption history</string>
    <string name="detail.chart2.title">Period daily average consumption</string>
    <string name="detail.chart3.title">Period daily average consumption history</string>
    <string name="detail.show.readings">Show period readings</string>
    <string name="details">Details</string>
    <string name="new_reading">New reading</string>
    <string name="readings.show.all_reading">Show all</string>
    <string name="readings.show.period_reading">Period readings</string>
    <string name="date_format_save">MMMM_dd_yyyy</string>
    <string name="date_time_format" translatable="false">dd-MM-yyyy HH:mm:ss</string>
    <string name="export_all">Export all readings</string>
    <string name="export_period_readings">Export active period readings</string>
    <string name="save_as">Save as…</string>
    <string name="export_error">Error trying to export data</string>
    <string name="export_succes">Data exported successfully!</string>
    <string name="import_error">Error trying to import data</string>
    <string name="import_succes">Data imported successfully!</string>
    <string name="export"><strike>Export</strike></string>
    <string name="_import"><strike>Import</strike></string>
    <string name="warning_avg">Average consumption above limit</string>
    <string name="period_history">Consumption history by period</string>
    <string name="calculator.hint">Click on this area to count the pulses</string>
    <string name="importing_data">Importing data…</string>
    <string name="exporting_data">Exporting data…</string>
    <string name="importing_msg">This may take a few seconds</string>
    <string name="delete_reading">Do you want to delete this record?</string>
    <string name="settings.ac.reminder_afer">Reading reminder (days)</string>
    <string name="reminder_msg">it\'s been %1$s days since last reading record</string>
    <string name="reminder">Reminder</string>
    <string name="title_choose_folder">Select a folder or press accept to set the current directory</string>
    <string name="choose">Choose</string>
    <string name="title_choose_file">Select a file</string>
    <string name="title_activity_mainkt">Mainkt</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="electric_meters">Electric meters</string>
    <string name="new_meter">New electric meter</string>
</resources>