<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_consumption"
            android:icon="@drawable/ic_bulb"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/nav_readings"
            android:icon="@drawable/ic_calculator"
            android:title="@string/calculator.title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_1"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:visible="false"
                android:id="@+id/nav_remove_ads"
                android:icon="@drawable/ic_coins_on_hand"
                android:title="@string/remove_ads" />

            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_file_upload"
                android:title="@string/export" />
            <item
                android:id="@+id/nav_import"
                android:icon="@drawable/ic_file_download"
                android:title="@string/_import" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_24dp"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_rate"
                android:title="@string/rate" />

        </menu>
    </item>

</menu>
