<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_all_readings"
        android:orderInCategory="100"
        android:title="@string/readings.show.all_reading"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_period_reading"
        android:orderInCategory="100"
        android:title="@string/readings.show.period_reading"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_readings"
        android:orderInCategory="100"
        android:title="@string/new_reading"
        android:icon="@drawable/ic_create"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/export_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_period"
        android:orderInCategory="100"
        android:title="@string/export_period_readings"
        app:showAsAction="never" />
</menu>
