<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_emater_list"
    tools:ignore="UnusedNavigation">

    <compartir_app  android:id="@+id/nav_share"/>
    <valorar_app  android:id="@+id/nav_rate"/>
    <import_ac  android:id="@+id/nav_import"/>
    <export_ac  android:id="@+id/nav_export"/>
    <nav_telegram  android:id="@+id/nav_telegram"/>


    <!--
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.nicrosoft.consumoelectrico.ui.home.MedidorFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nuevaLecturaFragment"
            app:destination="@id/nav_nueva_lectura" />
        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>
    -->
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.nicrosoft.consumoelectrico.ui.calculator.PulseCalculatorFragment"
        android:label="@string/calculator.title"
        tools:layout="@layout/fragment_real_time_consumption" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.nicrosoft.consumoelectrico.ui.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />




    <fragment
        android:id="@+id/nav_emater_list"
        android:name="com.nicrosoft.consumoelectrico.ui2.ElectricListFragment"
        android:label="@string/electric_meters"
        tools:layout="@layout/emeter_list_fragment" >
        <action
            android:id="@+id/action_nav_emater_list_to_newElectricMeterFragment"
            app:destination="@id/newElectricMeterFragment" />
        <action
            android:id="@+id/action_nav_emater_list_to_newEmeterReadingFragment"
            app:destination="@id/newEmeterReadingFragment" />
        <action
            android:id="@+id/action_nav_emater_list_to_electricReadingListFragment"
            app:destination="@id/electricReadingListFragment" />
        <action
            android:id="@+id/action_nav_emater_list_to_electricDetailFragment"
            app:destination="@id/electricDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/newElectricMeterFragment"
        android:name="com.nicrosoft.consumoelectrico.ui2.NewElectricFragment"
        android:label="@string/new_meter"
        tools:layout="@layout/fragment_new_electric_meter" >
        <argument
            android:name="editingItem"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/newEmeterReadingFragment"
        android:name="com.nicrosoft.consumoelectrico.ui2.NewElectricReadingFragment"
        android:label="@string/new_reading"
        tools:layout="@layout/fragment_new_emeter_reading" >
        <argument
            android:name="callFromReadingList"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/electricReadingListFragment"
        android:name="com.nicrosoft.consumoelectrico.ui2.ElectricReadingListFragment"
        android:label="@string/label_readings" />

    <fragment
        android:id="@+id/electricDetailFragment"
        android:name="com.nicrosoft.consumoelectrico.ui2.ElectricDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_electric_detail" >
        <action
            android:id="@+id/action_electricDetailFragment_to_newEmeterReadingFragment"
            app:destination="@id/newEmeterReadingFragment" />
    </fragment>
    <fragment
        android:id="@+id/electricLoadFragment"
        android:name="com.nicrosoft.consumoelectrico.ui2.ElectricLoadFragment"
        android:label="fragment_electric_load"
        tools:layout="@layout/fragment_electric_load" />
    <fragment
        android:id="@+id/electricDetailsFragment"
        android:name="com.nicrosoft.consumoelectrico.ui2.ElectricPeriodsFragment"
        android:label="fragment_electric_details"
        tools:layout="@layout/fragment_electric_periods" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.nicrosoft.consumoelectrico.ui2.HelpFragment"
        android:label="@string/help" />

</navigation>