<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        app:cardBackgroundColor="@color/md_grey_50"
        style="@style/Widget.MaterialComponents.CardView"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:strokeWidth="0dp"
        app:cardCornerRadius="16dp"
        android:id="@+id/card_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="4dp"
        android:minHeight="200dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@color/secondaryDarkColor"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:drawableTop="@drawable/ic_house"
                    android:drawablePadding="8dp"
                    android:id="@+id/txt_medidor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/share_tech"
                    android:paddingTop="8dp"
                    android:text="Casa Coonsuelo"
                    android:textAlignment="center"
                    android:textColor="@color/md_white_1000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:fontFamily="@font/coda"
                    android:id="@+id/txt_last_reading"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/md_white_1000"
                    tools:ignore="MissingPrefix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="200dp"
                    android:textSize="13sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     />

            </LinearLayout>


            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
                        android:id="@+id/circular_progress"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:startAngle="180"
                        app:formattingPattern="@string/pattern"
                        app:direction="clockwise"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        app:progressColor="@color/secondaryColor"
                        app:progressBackgroundColor="@color/md_grey_300"
                        app:progressStrokeWidth="5dp"
                        app:textSize="12sp"
                        app:drawDot="true"
                        app:dotWidth="7dp"
                        app:dotColor="@color/md_yellow_900"
                        app:textColor="@color/md_black_1000_75" />
                    <TextView
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/share_tech"
                        tools:ignore="MissingPrefix"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_consumption"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:fontFamily="@font/share_tech"
                        android:textColor="@color/md_red_500_75"
                        android:id="@+id/exceso_consumo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="+5 kwh"
                        android:textSize="12sp"
                        android:visibility="gone"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        fontPath="fonts/pierRegular.otf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/share_tech"
                        android:gravity="center"
                        android:text="@string/label_consump_avg"
                        android:textSize="13sp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/txt_period_avg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/share_tech"
                        android:gravity="center"
                        android:text="0 kwh"
                        android:textSize="22sp"
                        tools:ignore="MissingPrefix" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:visibility="gone"
                        android:id="@+id/warning_icon"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_warning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:visibility="gone"
                        android:id="@+id/warning_msg"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/md_red_500"
                        android:fontFamily="@font/share_tech"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:text="@string/warning_avg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
                        android:id="@+id/circular_progress2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:startAngle="180"
                        app:formattingPattern="@string/days_consumed_val"
                        app:direction="clockwise"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        app:progressColor="@color/secondaryColor"
                        app:progressBackgroundColor="@color/md_grey_300"
                        app:progressStrokeWidth="5dp"
                        app:textSize="12sp"
                        app:drawDot="true"
                        app:dotWidth="7dp"
                        app:dotColor="@color/md_yellow_900"
                        app:textColor="@color/md_black_1000_75" />
                    <TextView
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/share_tech"
                        tools:ignore="MissingPrefix"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_days_consumption"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:id="@+id/exceso_periodo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="+5 days"
                        android:fontFamily="@font/share_tech"
                        android:textColor="@color/md_red_500_75"
                        android:textSize="12sp"
                        android:visibility="gone"
                        tools:ignore="MissingPrefix" />


                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/md_pink_A400"
                    android:layout_margin="1dp"
                    android:id="@+id/bnt_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_margin="1dp"
                    android:textColor="@color/md_pink_A400"
                    android:id="@+id/bnt_readings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_readings"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:fontFamily="sans-serif"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textColor="@color/md_pink_A400"
                    android:layout_margin="1dp"
                    android:id="@+id/bnt_new_readings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_reading"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



